백엔드 최종 수정 커밋

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,9 @@
 <body>
 <h3>게임랭킹 보기</h3>
 <a href="game/ourRanking">전체</a>
-<a href="game/Rpg">RPG</a>
-<a href="game/Action">액션</a>
-<a href="game/Fps">Fps</a>
-<a href="game/Etc">기타</a>
+<a href="game/ranking?category=rpg">RPG</a>
+<a href="game/ranking?category=action">액션</a>
+<a href="game/ranking?category=fps">Fps</a>
+<a href="game/ranking?category=etc">기타</a>
 </body>
 </html>
